# license-manager

./: .buildinfo  .coveragerc  .craft.yml  .gitignore  404.html  AUTHORS  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  alembic.ini  architecture.html  conftest.py  default.env  development.html  genindex.html  getting_started.html  index.html  mypy.ini  objects.inv  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  search.html  searchindex.js  setup.py  towncrier.toml  tox.ini
agent/: CHANGELOG.md  CHANGELOG.rst  Makefile  README.md  README.rst  mypy.ini  pyproject.toml
agent/app/: backend_utils.py  forward.py  logs.py  main.py  reconciliation.py  tokenstat.py
agent/app/api/: __init__.py  booking_proxy.py  license_proxy.py
agent/lm_agent/: backend_utils.py  config.py  exceptions.py  forward.py  license_report.py  logs.py  main.py  reconcile.py  reconciliation.py  token.py  tokenstat.py  utils.py
agent/lm_agent/api/: __init__.py  booking_proxy.py  license_proxy.py
agent/lm_agent/backend_utils/: models.py  utils.py
agent/lm_agent/parsing/: flexlm.py  lmx.py  lsdyna.py  olicense.py  rlm.py
agent/lm_agent/server_interfaces/: flexlm.py  license_server_interface.py  lmx.py  lsdyna.py  olicense.py  rlm.py  utils.py
agent/tests/: conftest.py  test_backend_utils.py  test_booking_proxy.py  test_forward.py  test_license_proxy.py  test_license_report.py  test_main.py  test_reconciliation.py  test_settings.py  test_slurmctld_prolog.py  test_token.py  test_tokenstat.py
agent/tests/parsing/: test_flexlm.py  test_lmx.py  test_lsdyna.py  test_olicense.py  test_rlm.py
agent/tests/server_interfaces/: test_flexlm.py  test_lmx.py  test_lsdyna.py  test_olicense.py  test_rlm.py
backend/: .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  Dockerfile  Dockerfile-ci  Dockerfile-dev  Makefile  README.md  README.rst  docker-compose.yaml  mypy.ini  pyproject.toml  requirements.txt  test-requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001--implement_new_data_struture_schema.py  0002--remove_inventory_table.py  0003--implement_new_data_struture_schema.py  0003--remove_cluster_table.py  20211215_173901--0b3788c540bb_initial_migration_for_lm_in_armada.py  20220525_162530--5308f26e8b60_add_client_id_column_to_config_table_.py  bf1e9e9a9e5f_first_migration.py
backend/app/: api_schemas.py  debug.py  main.py  storage.py
backend/app/api/: __init__.py  (+3 more)
backend/data_migration/: exceptions.py  migration_script.py
backend/lm_backend/: api_schemas.py  compat.py  config.py  constants.py  crud.py  database.py  debug.py  exceptions.py  helpers.py  main.py  models.py  permissions.py  security.py  session.py  storage.py  table_schemas.py  version.py
backend/tests/: conftest.py  test_database.py  test_debug.py  test_main.py  test_security.py  test_storage.py  test_version.py
docs/: .buildinfo  Makefile  architecture.html  development.html  genindex.html  getting_started.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  searchindex.js
docs-source/: CHANGELOG.rst  Makefile  README.rst  architecture.rst  conf.py  development.rst  getting_started.rst  index.rst  pyproject.toml
docs-source/src/: architecture.rst  conf.py  development.rst  getting_started.rst
docs/.doctrees/: architecture.doctree  development.doctree  environment.pickle  getting_started.doctree  index.doctree
docs/_sources/: architecture.rst.txt  development.rst.txt  getting_started.rst.txt  index.rst.txt
docs/change-requests/: CR-move-lm-agent-off-slurmctld.docx
docs/src/: architecture.md  development.md  getting_started.md  index.md
jawthorizer/: .gitignore  Makefile  README.md  env.json  event.json  pyproject.toml  setup.py
jawthorizer/jawthorizer/: __init__.py
lm-agent/: .dockerignore  CHANGELOG.md  Dockerfile  Makefile  entrypoint.sh  pyproject.toml
lm-agent/lm_agent/: config.py  constants.py  exceptions.py  license_report.py  logs.py  main.py  models.py  reconcile.py  scheduler.py  utils.py
lm-agent/tests/: conftest.py  test_backend_utils.py  test_license_report.py  test_settings.py
lm-api/: CHANGELOG.md  Dockerfile  Dockerfile-ci  Makefile  docker-compose.yaml  entrypoint.sh  pyproject.toml
lm-api/alembic/: env.py
lm-api/data_migration/: migration_script.py  models.py
lm-api/lm_api/: config.py  constants.py  database.py  main.py  metrics.py  permissions.py  security.py  version.py
lm-api/tests/: conftest.py  test_database.py  test_security.py  test_version.py
lm-cli/: CHANGELOG.md  CHANGELOG.rst  Makefile  README.md  README.rst  pyproject.toml
lm-cli/lm_cli/: auth.py  config.py  constants.py  exceptions.py  logs.py  main.py  render.py  requests.py  schemas.py  text_tools.py  time_loop.py
lm-cli/tests/: conftest.py  test_auth.py  test_config.py  test_exceptions.py  test_requests.py  test_text_tools.py
lm-docs/: Makefile  pyproject.toml
lm-docs/docs/: mkdocs.yaml
lm-prolog-epilog-api/: Dockerfile  README.md  pyproject.toml
lm-prolog-epilog-api/lm_prolog_epilog_api/: __init__.py  main.py  schemas.py
lm-simulator/: CHANGELOG.md  Dockerfile  Dockerfile-ci  Makefile  README.md  docker-compose.yaml  pyproject.toml
lm-simulator-api/: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile-ci  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
lm-simulator-api/lm_simulator_api/: config.py  constants.py  crud.py  database.py  main.py  models.py  schemas.py  version.py
lm-simulator-api/tests/: conftest.py  test_crud.py  test_main.py
lm-simulator/job/: application.py  application.sh  batch.sh
lm-simulator/lm_simulator/: config.py  constants.py  crud.py  database.py  main.py  models.py  schemas.py
lm-simulator/scripts/: configure-licenses.sh  copy-application.sh  create-dev-setup.sh  install-jinja2.sh  prepare-environment.sh
lm-simulator/tests/: conftest.py  test_crud.py  test_main.py
lm-test/: Makefile  README.md  pyproject.toml
lm-test/lm_test/: cluster_interface.py  config.py  exceptions.py  lm_api_interface.py  lm_sim_interface.py  main.py  utils.py
(+469 files in other folders)
