[tool.poetry]
name = "license-manager"
version = "0.9.2-dev0"
description = "`license-manager` is a license scheduling middleware that adds value in situations where multiple clusters share a license server or set of license servers."
authors = ["OmniVector Solutions <info@omnivector.solutions>"]
license = "MIT"

packages = [
    { include = "licensemanager2", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
alembic = { version = "1.6.3", optional = true }
asyncpg = ""
aws-psycopg2 = ""
boto3 = { version = "", optional = true }
click = { version = "", optional = true }
databases = "0.4.1"
fastapi = { version = "0.65.1", optional = true }
fastapi-utils = ""
httpx = { version = "0.17.1", optional = true }
jinja2 = { version = "", optional = true }
mangum = ""
pyjwt = { version = "", optional = true }
sqlalchemy = "1.3.23"
# sqlalchemy = "~1.4"  # waiting for https://github.com/encode/databases/issues/298
sqlalchemy-utils = "0.37.4"
typer = { version = "0.3.2", optional = true }

pyyaml = { version = "5.4.1", optional = true }
pydantic = {version = "1.8.2", extras = ["dotenv"] }

# soft-required by databases:
aiosqlite = { version = "", optional = true }

flake8 = { version = "", optional = true }
isort = { version = "", optional = true }
pytest = { version = "", optional = true }
pytest-asyncio = { version = "", optional = true }
pytest-cov = { version = "", optional = true }
pytest-env = { version = "", optional = true }
pytest-freezegun = { version = "", optional = true }
respx = { version = "0.16.3", optional = true }

sqlalchemy-stubs = { version = "", optional = true }

tox = { version = "", optional = true }
uvicorn = { version = "", optional = true }

# type stubs
mypy = { version = "0.902", optional = true }
mypy-extensions = { version = "0.4.3", optional = true }

types-pkg-resources = { version = "0.1.2", optional = true }
types-PyYAML = { version = "0.1.8", optional = true }
types-Jinja2 = { version = "2.11.1", optional = true }
types-jwt = { version = "0.1.3", optional = true }
types-click = { version = "7.1.1", optional = true }
virtualenv = { version = "20.4.7", optional = true }
requests = "^2.25.1"
tabulate = { version = "0.8.9", optional = true }
sentry_sdk = { version = "1.1.0", optional = false }

[tool.poetry.extras]
agent = ["httpx", "jinja2", "uvicorn", "pyyaml", "pydantic"]

lm-create-jwt = ["boto3", "click", "pyjwt"]
lm-configure = ["typer", "requests", "tabulate"]

dev = [
    "aiosqlite",
    "black",
    "flake8",
    "isort",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-env",
    "pytest-freezegun",
    "pyyaml",
    "respx",
    "sqlalchemy-stubs",
    "tox",
    "uvicorn",
    "pydantic",
    "alembic",
    "typer",
    ]

unit = [
    "aiosqlite",
    "black",
    "flake8",
    "isort",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-env",
    "pytest-freezegun",
    "pyyaml",
    "respx",
    "sqlalchemy-stubs",
    "pydantic",
    "virtualenv",
]

mypy = [
    "mypy",
    "types-pkg-resources",
    "types-PyYAML",
    "mypy-extensions",
    "types-Jinja2",
    "types-jwt",
    "types-click",
    "sqlalchemy-stubs",
    "httpx",
    "pytest",
    "respx",
    "aiosqlite",
]



flexlmsim = ["jinja2", "tqdm"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lm-configure = "licensemanager2.backend.lmconfigure:app"
lm-create-jwt = "licensemanager2.backend.createjwt:main"
slurmctld-prolog = "licensemanager2.workload_managers.slurm.slurmctld_prolog:main"
slurmctld-epilog = "licensemanager2.workload_managers.slurm.slurmctld_epilog:main"
