[tool.poetry]
name = "license-manager-backend"
version = "2.3.0"
description = "Provides an API for managing license data"
authors = ["OmniVector Solutions <info@omnivector.solutions>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/omnivector-solutions/license-manager"
documentation = "https://omnivector-solutions.github.io/license-manager/"
packages = [{ include = "lm_backend" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
fastapi = "^0.68.0"
sentry-sdk = "^1.3.1"
jwt = {version = "^1.2.0", optional = true}
SQLAlchemy-Utils = "^0.37.8"
loguru = "^0.5.3"
asyncpg = "^0.24.0"
uvicorn = "^0.15.0"
python-dotenv = "^0.19.0"
armasec = "^0.11"
SQLAlchemy = "^1.4.47"
databases = {extras = ["postgresql"], version = "^0.7.0"}
toml = "^0.10.2"
py-buzz = "^3.2.1"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
pytest-env = "^0.6.2"
pytest-freezegun = "^0.4.2"
respx = "^0.20.1"
flake8 = "^3.9.2"
isort = "^5.9.3"
pytest-random-order = "^1.0.4"
pytest-sugar = "^0.9.4"
aiosqlite = "^0.17.0"
ipython = "^8.10.0"
asgi-lifespan = "^1.0.1"
black = "^22.3"
alembic = "^1.6.5"
mypy = "^0.910"
sqlalchemy-stubs = "^0.4"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--random-order --cov=lm_backend --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
env = [
    "DATABASE_URL = sqlite:///sqlite-testing.db",
    "LOG_LEVEL_SQL = ERROR",

    # This setting must align with the rs256_domain fixture from armasec's pytest extension
    "ARMASEC_DOMAIN = armasec.dev",
    "ARMASEC_DEBUG = True",
]

[tool.black]
line-length = 110
src = ["lm_backend", "tests"]

[tool.isort]
line_length = 110
src_paths = ["lm_backend", "tests"]
multi_line_output = 3
include_trailing_comma = true

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "pkg_resources",
    "toml",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
