[tool.poetry]
name = "license-manager-documentation"
version = "3.0.6"
description = "License Manager Official Documentation"
authors = ["Omnivector Solutions <info@omnivector.solutions>"]
license = "MIT"
repository = "https://github.com/omnivector-solutions/license-manager"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material = "^9.1.21"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
