[tool.poetry]
name = "license-manager-agent"
version = "4.4.1"
description = "Provides an agent for interacting with license manager"
authors = ["OmniVector Solutions <info@omnivector.solutions>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/omnivector-solutions/license-manager"
documentation = "https://omnivector-solutions.github.io/license-manager/"
packages = [{ include = "lm_agent" }]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.18.2"
PyJWT = "^2.4.0"
pydantic = "^2.7"
requests = "^2.26.0"
tabulate = "^0.8.9"
sentry-sdk = ">=1.3.1,<3.0.0"
py-buzz = "^3.2.1"
pydantic-settings = "^2.3.3"
apscheduler = "3.10.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
pytest-env = "^0.6.2"
respx = "^0.17.1"
pytest-random-order = "^1.0.4"
pytest-sugar = "^0.9.4"
types-click = "^7.1.5"
ruff = "^0.1.11"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--random-order --cov=lm_agent --cov-report=term-missing --cov-fail-under=70"
testpaths = ["tests"]
env = [
    "LM_AGENT_OIDC_DOMAIN = str",
    "LM_AGENT_OIDC_CLIENT_ID = str",
    "LM_AGENT_OIDC_CLIENT_SECRET = str",
    "LM_AGENT_BACKEND_BASE_URL = http://backend",
    "LM_AGENT_LMUTIL_PATH = ./tests/mock_tools",
    "LM_AGENT_RLMUTIL_PATH = ./tests/mock_tools",
    "LM_AGENT_LSDYNA_PATH = ./tests/mock_tools",
    "LM_AGENT_LMXENDUTIL_PATH = ./tests/mock_tools",
    "LM_AGENT_OLIXTOOL_PATH = ./tests/mock_tools",
    "LM_AGENT_LOG_LEVEL = DEBUG",
]

[tool.ruff]
line-length = 110

[[tool.mypy.overrides]]
module = [
    "buzz",
    "pkg_resources",
    "apscheduler.*"
]
ignore_missing_imports = true

[tool.poetry.scripts]
license-manager-agent = "lm_agent.main:main"
slurmctld-prolog = "lm_agent.workload_managers.slurm.slurmctld_prolog:main"
slurmctld-epilog = "lm_agent.workload_managers.slurm.slurmctld_epilog:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
