[tool.poetry]
name = "license-manager-backend"
version = "4.4.1"
description = "Provides an API for managing license data"
authors = ["OmniVector Solutions <info@omnivector.solutions>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/omnivector-solutions/license-manager"
documentation = "https://omnivector-solutions.github.io/license-manager/"
packages = [{ include = "lm_api" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sentry-sdk = "2.8.0"
jwt = {version = "^1.2.0", optional = true}
SQLAlchemy-Utils = "^0.37.8"
loguru = "^0.5.3"
asyncpg = "^0.28"
uvicorn = "^0.30.1"
python-dotenv = "^0.21.0"
armasec = "^2.0.1"
SQLAlchemy = {extras = ["mypy"], version = "^2.0.22"}
toml = "^0.10.2"
py-buzz = "^4.1.0"
psycopg2 = "^2.9.5"
yarl = "^1.9.2"
pydantic = {version = "^2.8.2", extras = ["email"]}
inflection = "^0.5.1"
pendulum = {extras = ["test"], version = "^3.0.0"}
pydantic-settings = "^2.3.1"
pydantic-extra-types = "^2.10.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
pytest-env = "^0.6.2"
respx = "^0.20"
pytest-random-order = "^1.0.4"
pytest-sugar = "^0.9.4"
ipython = "^8.10.0"
asgi-lifespan = "^1.0.1"
alembic = "^1.6.5"
ruff = "^0.1.11"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--random-order --cov=lm_api --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
env = [
    "DEPLOY_ENV = TEST",  # Enforces that test database env vars will be used
    "ARMASEC_DOMAIN = armasec.dev",  # Must align with the rs256_domain fixture in armasec's pytest extension
    "ARMASEC_DEBUG = False",  # Set this to True to debug armasec issues by seeing verbose logging
]

[tool.coverage.run]
concurrency = ["greenlet", "thread"]

[tool.ruff]
line-length = 110

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin, pydantic.mypy"

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "pkg_resources",
    "toml",
    "pendulum",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
