[tool.poetry]
name = "license-manager-cli"
version = "4.4.1"
description = "License Manager CLI Client"
authors = ["Omnivector Solutions <info@omnivector.solutions>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/omnivector-solutions/license-manager"
documentation = "https://omnivector-solutions.github.io/license-manager/"
packages = [ { include = "lm_cli" } ]


[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
rich = "^11.2.0"
pyperclip = "^1.8.2"
python-jose = "^3.3.0"
loguru = "^0.6.0"
py-buzz = "^3.2.1"
typer = "^0.4.1"
pendulum = "3.0.0b1"
httpx = ">=0.22,<0.24"
importlib-metadata = "<5.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.3.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
plummet = "^1.1.0"
pytest-random-order = "^1.0.4"
pytest-cov = "^3.0.0"
pytest-responsemock = "^1.0.1"
pytest-env = "^0.6.2"
pytest-mock = "^3.6.0"
respx = ">=0.20.1"
ruff = "^0.1.11"

[tool.poetry.scripts]
lm-cli = "lm_cli.main:app"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--random-order",
    "--cov=lm_cli",
    "--cov-report=term-missing",
    "--cov-fail-under=75",
]
env = [
    "LM_API_ENDPOINT = https://dummy_api.com/lm/api/v1",
    "LM_DEBUG = false",
    "OIDC_DOMAIN = dummy_auth_domain.com",
    "OIDC_CLIENT_ID = dummy_client_id",
    "IDENTITY_CLAIMS_KEY = email",
]

[tool.ruff]
line-length = 110

[[tool.mypy.overrides]]
module = [
    "pyperclip",
    "jose.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

