[project]
name = "license-manager-cli"
version = "4.5.0"
description = "License Manager CLI Client"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Omnivector Solutions", email = "info@omnivector.solutions" }
]
requires-python = ">=3.12"
repository = "https://github.com/omnivector-solutions/license-manager"
documentation = "https://omnivector-solutions.github.io/license-manager/"

dependencies = [
    "pydantic>=2.12",
    "rich>=14.2.0",
    "pyperclip>=1.11.0",
    "python-jose>=3.5.0",
    "loguru>=0.7.3",
    "py-buzz>=7.3.0",
    "typer>=0.19.2",
    "pendulum==3.1.0",
    "httpx>=0.28.1",
    "importlib-metadata<5.0",
    "python-dotenv>=1.1.1",
    "pydantic-settings>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.18.0",
    "plummet[time-machine]>=1.1.0",
    "pytest-random-order>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-responsemock>=1.0.1",
    "pytest-env>=1.0.0",
    "pytest-mock>=3.6.0",
    "respx>=0.22.0",
    "ruff>=0.13.0",
]

[project.scripts]
lm-cli = "lm_cli.main:app"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--random-order",
    "--cov=lm_cli",
    "--cov-report=term-missing",
    "--cov-fail-under=75",
]
env = [
    "LM_API_ENDPOINT = https://dummy_api.com/lm/api/v1",
    "LM_DEBUG = false",
    "OIDC_DOMAIN = dummy_auth_domain.com",
    "OIDC_CLIENT_ID = dummy_client_id",
    "IDENTITY_CLAIMS_KEY = email",
]

[tool.ruff]
extend = "../ruff.toml"

[[tool.mypy.overrides]]
module = [
    "pyperclip",
    "jose.*",
]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["lm_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
