[project]
name = "license-manager-documentation"
version = "3.0.6"
description = "License Manager Official Documentation"
license = { text = "MIT" }
authors = [
    { name = "Omnivector Solutions", email = "info@omnivector.solutions" }
]
requires-python = ">=3.12"
repository = "https://github.com/omnivector-solutions/license-manager"

dependencies = [
    "mkdocs-material>=9.1.21",
    "griffe-pydantic>=1.1.0",
    "griffe>=1.5.1",
    "mkdocstrings-python>=1.12.2",
    "pydantic>=2.10.2",
]
