[tool.poetry]
name = "license-manager-simulator-api"
version = "4.4.1"
description = "Provides an API for interfacing with License Manager Simulator"
authors = ["OmniVector Solutions <info@omnivector.solutions>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/omnivector-solutions/license-manager"
documentation = "https://omnivector-solutions.github.io/license-manager/"
packages = [{ include = "lm_simulator_api" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
SQLAlchemy = {extras = ["mypy"], version = "^2.0.22"}
uvicorn = "^0.30.1"
requests = "^2.27.1"
psycopg2 = "2.9.5"
yarl = "^1.9.2"
asyncpg = "^0.28"
py-buzz = "^4.1.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
pytest-env = "^0.6.2"
pytest-random-order = "^1.0.4"
python-dotenv = "^1.0.1"
ruff = "^0.5.7"

[tool.ruff]
line-length = 110

[tool.pytest.ini_options]
addopts = "-v --random-order --cov=lm_simulator_api --cov-report=term-missing --cov-fail-under=85"
env = [
    "TEST_DATABASE_HOST: test-db",
    "TEST_DATABASE_USER: test-user",
    "TEST_DATABASE_PSWD: test-pswd",
    "TEST_DATABASE_NAME: test-db",
    "TEST_DATABASE_PORT: 5432"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
