[tool.poetry]
name = "license-manager-simulator"
version = "0.3.0"
description = "The License Manager Simulator is an application that simulates output from 5 license servers for use in the development of applications which interface to the license servers."
authors = ["OmniVector Solutions <info@omnivector.solutions>"]
license = "MIT"
packages = [{ include = "lm_simulator" }]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.26.0"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.9.3"

[tool.black]
line-length = 110
src = ["lm_simulator", "tests"]

[tool.isort]
line_length = 110
src_paths = ["lm_simulator", "tests"]
multi_line_output = 3
include_trailing_comma = true

[tool.poetry.scripts]
lmutil = "lm_simulator.fake_binaries.flexlm.lmutil:main"
lmxendutil = "lm_simulator.fake_binaries.lmx.lmxendutil:main"
lstc_qrun = "lm_simulator.fake_binaries.lsdyna.lstc_qrun:main"
olixtool = "lm_simulator.fake_binaries.olicense.olixtool:main"
rlmutil = "lm_simulator.fake_binaries.rlm.rlmutil:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
